[package]
name = "crc-any"
version = "2.3.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/crc-any"
homepage = "https://magiclen.org/crc-any"
keywords = ["hash", "crc", "crc16", "crc32", "crc64"]
categories = ["no-std", "algorithms"]
description= "To compute CRC values by providing the length of bits, expression, reflection, an initial value and a final xor value. It has many built-in CRC functions."
readme = "README.md"
license = "MIT"

[badges.travis-ci]
repository = "magiclen/crc-any"
branch = "master"

[dependencies]

[dependencies.debug-helper]
version = "0.3"
optional = true

[dependencies.heapless]
version = "0.5"
optional = true

[dev-dependencies]
bencher = "0.1.5"

[features]
default = ["alloc"]
alloc = ["debug-helper"]
std = []
development = ["std"]

[[bench]]
name = "bench"
harness = false
