[package]
name = "crc-any"
version = "3.0.1"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2024"
rust-version = "1.87"
repository = "https://github.com/magiclen/crc-any"
homepage = "https://magiclen.org/crc-any"
keywords = ["hash", "crc", "crc16", "crc32", "crc64"]
categories = ["no-std", "algorithms"]
description = "This crate computes CRC values from a bit width, a polynomial, a reflection setting, an initial value, and a final XOR value. It also provides many built-in CRC functions for common CRC variants."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]

[dependencies.debug-helper]
version = "0.3"
optional = true

[dependencies.heapless]
version = "0.9"
optional = true

[dev-dependencies]
bencher = "0.1.5"

[features]
default = ["std"]
alloc = ["dep:debug-helper"]
std = ["alloc"]
development = ["std"]

[[bench]]
name = "bench"
harness = false
